--- a/Random_Quote_Machine/index.html
+++ b/Random_Quote_Machine/index.html
@@ -1,10 +1,8 @@
 <div class="container">
   <h1 class="text-primary text-center">Random Quote Machine</h1>
   <div class="well">
-    <h2 class="text-center" id="quote">Quote goes here</h2>
-  </div>
-  <div><a class="twitter-share-button" href="https://twitter.com/intent/tweet">
-Tweet</a>
+    <h2 class="text-center" id="quote"></h2>
+    <div id="container"></div>
   </div>
   <div>
     <button class="btn btn-primary btn-block" id="btn_QuoteMe">Get a new quote</button>
