Work in progress on Calculator Zipline
Performs the basic calculator features but needs further refinement.

--- a/JavaScript_Calculator/index.html
+++ b/JavaScript_Calculator/index.html
@@ -68,7 +68,7 @@
         <button id="zero" class="digit btn btn-block btn-lg btn-calculator btn-default">0</button>
       </div>
       <div class="col-xs-3">
-        <button id="point" class="btn btn-block btn-lg btn-calculator btn-default">.</button>
+        <button id="point" class="decimal-point btn btn-block btn-lg btn-calculator btn-default">.</button>
       </div>
       <div class="col-xs-3">
         <button id="equals" class="btn btn-block btn-lg btn-calculator btn-warning">=</button>
