Changed arithmetic operators
The arithmetic and plus/minus operators have been updated to better
looking characters.

--- a/JavaScript_Calculator/index.html
+++ b/JavaScript_Calculator/index.html
@@ -12,13 +12,13 @@
         <button id="ac" class="btn btn-lg btn-block btn-danger btn-calculator">AC</button>
       </div>
       <div class="col-xs-3">
-        <button id="plus_minus" class="btn btn-lg btn-block btn-default btn-calculator">+/-</button>
+        <button id="plus_minus" class="btn btn-lg btn-block btn-default btn-calculator">±</button>
       </div>
       <div class="col-xs-3">
         <button id="percent" class="btn btn-block btn-lg btn-default btn-calculator">%</button>
       </div>
       <div class="col-xs-3">
-        <button id="divide" class="operator btn btn-block btn-lg btn-warning btn-calculator">/</button>
+        <button id="divide" class="operator btn btn-block btn-lg btn-warning btn-calculator">÷</button>
       </div>
     </div>
     <div class="row no-gutter">
@@ -32,7 +32,7 @@
         <button id="nine" class="digit btn btn-block btn-lg btn-default btn-calculator">9</button>
       </div>
       <div class="col-xs-3">
-        <button id="multiply" class="operator btn btn-block btn-lg btn-calculator btn-warning">X</button>
+        <button id="multiply" class="operator btn btn-block btn-lg btn-calculator btn-warning">×</button>
       </div>
     </div>
     <div class="row no-gutter">
@@ -46,7 +46,7 @@
         <button id="six" class="digit btn btn-block btn-lg btn-default btn-calculator">6</button>
       </div>
       <div class="col-xs-3">
-        <button id="minus" class="operator btn btn-block btn-lg btn-warning btn-calculator">-</button>
+        <button id="minus" class="operator btn btn-block btn-lg btn-warning btn-calculator">−</button>
       </div>
     </div>
     <div class="row no-gutter">
