Minor text change
Shortened button title so that it displays correctly on narrow mobile
screens.

--- a/Random_Quote_Machine/index.html
+++ b/Random_Quote_Machine/index.html
@@ -1,7 +1,7 @@
-<div class="container">
+v class="container">
   <h1 id="title" class="text-primary text-center">Random Quotes on Design</h1>
   <div>
-    <button class="btn btn-default btn-block btn-lg" id="btn_QuoteMe">Get another random design quote</button>
+    <button class="btn btn-default btn-block btn-lg" id="btn_QuoteMe">Get another design quote</button>
   </div>
   <div class="well">
     <blockquote>
