--- a/Use_Twitch_JSON_API/index.html
+++ b/Use_Twitch_JSON_API/index.html
@@ -1,18 +1,14 @@
 <div class="container">
   <div class="page-header">
-    <h1>Twitch Status</h1>
-  </div>
-  <div class="media">
-    <div class="media-left">
-      <a href="#">
-        <img class="media-object" src="..." alt="...">
-      </a>
-    </div>
-    <div class="media-body">
-      <a><h4 class="media-heading">List group item heading</h4>
-      <p class="media-desc">...</p>  
-      </a>
-      <h5 class="media-status">...</h5>
+    <h1>TWITCH STREAMERS</h1>
+    <div class="btn-group btn-group-lg" role="group" aria-label="...">
+      <button type="button" class="btn btn-default">All</button>
+      <button type="button" class="btn">Online</button>
+      <button type="button" class="btn">Offine</button>
     </div>
   </div>
+
+  <ul class="media-list">
+    <!-- List item go in here   -->
+  </ul>
 </div>
