--- a/Use_Twitch_JSON_API/index.html
+++ b/Use_Twitch_JSON_API/index.html
@@ -2,13 +2,13 @@
   <div class="page-header">
     <h1>TWITCH STREAMERS</h1>
     <div class="btn-group btn-group-lg" role="group" aria-label="...">
-      <button type="button" class="btn btn-default">All</button>
-      <button type="button" class="btn">Online</button>
-      <button type="button" class="btn">Offine</button>
+      <button id="all" type="button" class="btn btn-default">All</button>
+      <button id="on" type="button" class="btn btn-default">Online</button>
+      <button id="off" type="button" class="btn btn-default">Offine</button>
     </div>
+    <ul class="media-list">
+      <!-- List items go in here  -->
+    </ul>
   </div>
-
-  <ul class="media-list">
-    <!-- List item go in here   -->
-  </ul>
+  <p class="text-center">Created by <a href="http://www.freecodecamp.com/dickyw71" target="_blank">Richard Wheatley</a></p>
 </div>
